@@ -1,3 +1,7 @@
+2011-07-08  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: scheme-boolean widget
+	now really working as suppposed
+
 2011-07-05  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/cfg/slot.jl: hide widgets which depend on an disabled
 	value (rather than showing insensitive widgets)
